# Brackocalypse

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.run/: Brackocalypse - Build before running.run.xml
Scripts/: BlockPlayer.cpp  BlockPlayer.hpp  BopAnimation.cpp  BulletActions.cpp  BulletActions.hpp  BulletHitEnemy.cpp  BulletHitEnemy.hpp  CameraFocussedUserInput.cpp  CameraFocussedUserInput.hpp  CollectBeers.cpp  CollectBeers.hpp  CreditsScroll.cpp  CreditsScroll.hpp  EnemyDamage.cpp  EnemyDamage.hpp  EnemyFollowPlayer.cpp  EnemyFollowPlayer.hpp  EnemySpawn.cpp  EnemySpawn.hpp  FollowGameObject.cpp  FollowGameObject.hpp  FullScreenHandler.cpp  FullScreenHandler.hpp  GoToNextLevel.cpp  GoToNextLevel.hpp  GunFollowMouse.cpp  GunFollowMouse.hpp  GunShooting.cpp  GunShooting.hpp  HealthBars.cpp  HealthBars.hpp  MovementAnimation.cpp  MovementAnimation.hpp  PauseHandler.cpp  PauseHandler.hpp  PlayBoxMovingSound.cpp  PlayBoxMovingSound.hpp  PlayerCollision.cpp  PlayerCollision.hpp  PlayerProgress.cpp  (+18 more)
Src/: Beer.hpp  BeerPool.cpp  BeerPool.hpp  Bullet.cpp  Bullet.hpp  BulletPool.cpp  BulletPool.hpp  Crate.cpp  Crate.hpp  Enemy.cpp  Enemy.hpp  EnemyKillHud.cpp  EnemyKillHud.hpp  EnemyPool.cpp  EnemyPool.hpp  Gun.cpp  Gun.hpp  HealthBar.cpp  HealthBar.hpp  Level.hpp  LevelBuilder.cpp  LevelBuilder.hpp  MuteButton.hpp  PauseManager.cpp  PauseManager.hpp  PauseMenu.cpp  PauseMenu.hpp  Player.cpp  Player.hpp  PlayerComponent.hpp  PlayerHealthBar.cpp  PlayerHealthBar.hpp  PlayerProgress.cpp  PlayerProgress.hpp  PoolCreator.hpp  ProgressBar.cpp  ProgressBar.hpp  RogueLikeSheetMap.hpp  SaveLoad.cpp  SaveLoad.hpp  (+6 more)
Src/Button/: StartButton.hpp
Src/Components/: HealthComponent.hpp  HitSoundComponent.hpp  SpawnComponent.hpp  WanderSoundComponent.hpp
Src/Factory/: LevelFactory.cpp  LevelFactory.hpp
Src/Helpers/: MapType.hpp  RogueLikeSheetIndoorType.hpp  RogueLikeSheetMap.hpp  RogueLikeSheetOutdoorType.hpp  RogueLikeSheetType.hpp
Src/RogueLikeMapTiles/: BoatMapTile.hpp  BoxCollisionMapTile.hpp  CampfireMapTile.hpp  FireMapTile.hpp  PlayerSpawnMapTile.hpp  RogueLikeMapTile.hpp  SolidBoxMapTile.hpp  WaterMapTile.hpp
Src/Scenes/: CreditsScene.cpp  CreditsScene.hpp  DemoLevel.cpp  DemoLevel.hpp  EndScene.cpp  EndScene.hpp  EndScreen.cpp  EndScreen.hpp  GameOverScene.cpp  GameOverScene.hpp  HomeScene.cpp  HomeScene.hpp  InterludeOneScene.cpp  InterludeOneScene.hpp  InterludeThreeScene.cpp  InterludeThreeScene.hpp  InterludeTwoScene.cpp  InterludeTwoScene.hpp  IntroductionScene.cpp  IntroductionScene.hpp  LevelManager.cpp  LevelManager.hpp  SceneType.hpp  StoryScene.cpp  StoryScene.hpp  secondLevel.cpp  secondLevel.hpp
Src/Scenes/Levels/: BossLevel.cpp  BossLevel.hpp  FirstLevel.cpp  FirstLevel.hpp  SecondLevel.cpp  SecondLevel.hpp
Src/Scripts/: BopAnimation.hpp  BulletActions.cpp  BulletActions.hpp  CollectBeers.cpp  CollectBeers.hpp  CreditsScroll.cpp  EnemyDamage.cpp  EnemyFollowPlayer.cpp  EnemySpawn.cpp  EnemySpawn.hpp  FollowGameObject.cpp  FollowGameObject.hpp  FullScreenHandler.cpp  GunFollowMouse.cpp  GunShooting.cpp  MovementAnimation.cpp  MovementAnimation.hpp  PauseHandler.cpp  PlayBoxMovingSound.hpp  PlayerProgressScript.cpp  PlayerProgressScript.hpp  SpawnInBeers.cpp  SpawnInBeers.hpp  TakeDamage.cpp  TakeDamage.hpp  ToggleFPS.cpp  ToggleFPS.hpp  UpdateHealth.cpp  UpdateHealth.hpp  UserInputMovement.cpp  WifeComplaints.cpp  WifeComplaints.hpp  WifeDeath.cpp  WifeDeath.hpp  WriteTextAnimation.cpp  WriteTextAnimation.hpp
